fixed z-index problems

--- a/style.css
+++ b/style.css
@@ -118,16 +118,14 @@ textarea:hover {
     padding: 10px 20px;
     width: 50%;
     height: 35px;
-    cursor: pointer;
     overflow: hidden;
-    pointer-events: none;
 }
 
-.radio-button > label {
+.radio-button > p {
     display: block;
-    z-index: 2;
     padding-left: 5px;
     font-size: 13px; color: var(--Grey-900);
+    z-index: 2;
 }
 
 .span-bg {
@@ -136,12 +134,12 @@ textarea:hover {
     width: 100%;
     height: 35px;
     background-color: var(--White);
-    z-index: 0;
+    z-index: 1;
     top: 0px;
     left: 0px;
     border-radius: 5px;
     border: 1px solid var(--Grey-500);
-    pointer-events: auto;
+    pointer-events: none;
 }
 
 .radio-button input[type=radio]:checked~.span-bg {
@@ -162,6 +160,11 @@ textarea:hover {
     padding: 6px;
     display: block;
     z-index: 3;
+}
+
+/* Without this, the radio button won't be clickable, only the box */
+input[type="radio"] {
+    z-index: 4;
 }
 
 .radio-button input[type="radio"]:checked~.radio-tick {
